--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite-plugin-pwa": "^0.12.0"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
